fix: preserve black key label color when hovering on mobile

--- a/static/css/responsive.css
+++ b/static/css/responsive.css
@@ -1,15 +1,17 @@
 @media screen and (max-width: 768px) {
     body,
     body[data-theme="midnight"] {
-        /* don't change colours when hovering, as it doesn't work properly on mobile. */
+        /* don't change colours when hovering, as it looks weird on mobile. */
         --white-key-hover-color: var(--white-key-color);
         --black-key-hover-color: var(--black-key-color);
+        --black-key-hover-label-color: var(--black-key-label-color);
 
         /* widen black keys */
         --black-key-width: calc(var(--white-key-width) / 1.5);
         --black-key-left-offset: calc(var(--white-key-width) / 3.75);
         --black-key-center-offset: calc(var(--white-key-width) / 3);
         --black-key-right-offset: calc(var(--white-key-width) / 2.25);
+
     }
 
     /* hover colour is too light, so white text would have bad contrast on white keys */
